@@ -16,6 +16,8 @@ Open this serial port device to connect to the elm327 device.
 .IP "-c|--count <count>"
 Take this many samples at most. Leaving this option out defaults
 to incessant sampling.
+.IP "-u|--output-log <filename>"
+Redirect stdout and stderr to this file
 .IP "-l|--serial-log <filename>"
 Log all serial comms into this file.
 .IP "-a|--samplerate <samples-per-second>"
